criando headings para facilitar entendimento

--- a/alugel_imoveis.ipynb
+++ b/alugel_imoveis.ipynb
@@ -113,7 +113,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalizando o dataframe"
+    "## Normalizando o dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dados estão aninhados em dicionarios, para converter em tabela, basta: \n"
    ]
   },
   {
@@ -327,7 +334,6 @@
     }
    ],
    "source": [
-    "# Dados estão aninhados em dicionarios, para converter em tabela, basta: \n",
     "dados = pd.json_normalize(data_hosp['info_moveis'])\n",
     "dados.head()"
    ]
@@ -350,6 +356,13 @@
    ],
    "source": [
     "dados.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Melhorar a visualização\n"
    ]
   },
   {
@@ -381,7 +394,6 @@
     }
    ],
    "source": [
-    "#Melhorar a visualização\n",
     "colunas = list(dados.columns)\n",
     "colunas"
    ]
@@ -594,6 +606,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Resetando os valores do index\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -769,7 +788,6 @@
     }
    ],
    "source": [
-    "#Resetando os valores do index\n",
     "dados.reset_index(inplace=True, drop=True)\n",
     "\n",
     "dados.head()"
@@ -779,7 +797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convertendo os tipos de dados do dataframe"
+    "#### Convertendo os tipos de dados do dataframe"
    ]
   },
   {
@@ -833,14 +851,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Importando a biblioteca numpy para aplicar a função para converter os dados\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Importando a biblioteca numpy para aplicar a função para converter os dados\n",
     "import numpy as np\n",
     "dados.max_hospedes = dados.max_hospedes.astype(np.int64)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Colunas para o  tipo inteiro\n"
    ]
   },
   {
@@ -849,9 +880,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Colunas para o  tipo inteiro\n",
     "colunas_num = ['quantidade_banheiros','quantidade_quartos','quantidade_camas']\n",
     "dados[colunas_num] = dados[colunas_num].astype(np.int64)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Coluna para o tipo float\n"
    ]
   },
   {
@@ -860,8 +897,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Coluna para o tipo float\n",
     "dados['avaliacao_geral'] = dados['avaliacao_geral'].astype(np.float64)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Verificando se os dados foram convertidos\n"
    ]
   },
   {
@@ -897,7 +940,6 @@
     }
    ],
    "source": [
-    "#Verificando se os dados foram convertidos\n",
     "dados.info()"
    ]
   },
@@ -909,13 +951,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tratamento da coluna Preço\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tratamento da coluna Preço\n",
     "dados.preco = dados.preco.apply(lambda x:x.replace('$','').replace(',','').strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Convertendo tipo de dados\n"
    ]
   },
   {
@@ -924,8 +979,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convertendo tipo de dados\n",
     "dados.preco = dados.preco.astype(np.float64)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Verificando se os dados foram convertidos\n"
    ]
   },
   {
@@ -961,8 +1022,14 @@
     }
    ],
    "source": [
-    "#Verificando se os dados foram convertidos\n",
     "dados.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tratamento as colunas Taxa_deposito e Taxa limpeza\n"
    ]
   },
   {
@@ -971,8 +1038,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tratamento as colunas Taxa_deposito e Taxa limpeza\n",
-    "\n",
     "dados[['taxa_deposito','taxa_limpeza']] = dados[['taxa_deposito','taxa_limpeza']].applymap(lambda x:x.replace('$','').replace(',','').strip())"
    ]
   },
@@ -1030,15 +1095,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Função lower() transforma todos os caracteres em letra minuscula\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Manipulando dados textuais\n",
-    "\n",
-    "### função lower() transforma todos os caracteres em letra minuscula\n",
     "dados.descricao_local = dados.descricao_local.str.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Removendo caracteres com regex\n"
    ]
   },
   {
@@ -1058,7 +1134,6 @@
     }
    ],
    "source": [
-    "#Removendo caracteres com regex\n",
     "dados.descricao_local[2343]"
    ]
   },
@@ -1260,14 +1335,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remover os {}\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tratar a coluna comonidades\n",
-    "### Remover os {}\n",
     "dados.comodidades = dados.comodidades.str.replace('\\{|}|\\\"','',regex=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Função .split() divide uma string em várias partes com base em um delimitador específico.\n"
    ]
   },
   {
@@ -1446,7 +1534,6 @@
     }
    ],
    "source": [
-    "# função .split() divide uma string em várias partes com base em um delimitador específico.\n",
     "dados.comodidades = dados.comodidades.str.split(',')\n",
     "\n",
     "dados.head()"
@@ -1583,7 +1670,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Converter object para data\n",
+    "# Converter object para data\n",
     "\n",
     "data_imoveis['data'] = pd.to_datetime(data_imoveis['data'])\n"
    ]
@@ -1623,6 +1710,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Manipulando dados do tipo date_time\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -1650,8 +1744,14 @@
     }
    ],
    "source": [
-    "# Manipulando dados do tipo date_time\n",
     "data_imoveis.data.dt.strftime('%Y-%m')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Criando um gráfico\n"
    ]
   },
   {
@@ -1660,8 +1760,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Criando um gráfico\n",
     "subset = data_imoveis.groupby(data_imoveis.data.dt.strftime('%Y-%m'))['vaga_disponivel'].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plotando um gráfico \n"
    ]
   },
   {
@@ -1691,7 +1797,6 @@
     }
    ],
    "source": [
-    "# Plotando um gráfico \n",
     "subset.plot() "
    ]
   }
